# DeckBuilder

./: .gitignore
backend/: .env.example  pyproject.toml  streamlit_app.py  test_ui.py
backend/alembic/: env.py
backend/alembic/versions/: f9113ed321f7_add_agent_jobs_table.py
backend/app/: main.py
backend/app/agents/: data_agent.py  ingest_agent.py  insight_agent.py  orchestrator.py  planner_agent.py  ppt_agent.py  skeleton_contracts_agent.py  state.py  visualization_agent.py
backend/app/api/v1/: ai_controller.py  draft_controller.py  generation_controller.py  health_controller.py  ppt_templates_controller.py  report_controller.py  section_controller.py  structure_controller.py  template_controller.py
backend/app/api/v2/: agent_controller.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  llm_client.py  paths.py
backend/app/mcp/: server.py  tool_adapters.py
backend/app/models/: __init__.py  agent_job_model.py  base_model.py  draft_model.py  generated_report_model.py  report_model.py  report_section_model.py  template_model.py  template_section_model.py
backend/app/ppt_engine/: comprehensive_ppt_test.py  custom_ppt_verification.py  error_handlers.py  ppt_builder.py  pptx_builder.py  pptx_update.py  template_ppt_builder.py  verify_ppt_generation.py
backend/app/repositories/: agent_job_repository.py  base_repository.py  generated_report_repository.py  report_repository.py  section_repository.py  template_repository.py
backend/app/schemas/: agent_schema.py  ai_schema.py  draft_schema.py  generation_schema.py  report_schema.py  response.py  structure_schema.py  template_schema.py  tool_schema.py
backend/app/services/: ai_service.py  ppt_service.py  report_service.py  section_service.py  seed_service.py  structure_service.py  template_ppt_validation.py  template_service.py
backend/app/tools/: __init__.py  base_tool.py  data_tool.py  ingest_tool.py  insight_tool.py  mapping_tool.py  ppt_tool.py  structure_tool.py  viz_tool.py
backend/app/utils/: formatting.py  logger.py
(+222 files in other folders)
