[project]
name = "autodeck-backend"
version = "0.1.0"
description = "AI-Powered PPT Builder — FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-pptx>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "lxml>=5.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "openai>=2.30.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "alembic>=1.13.0",
    "streamlit>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
